# messenger-backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: dependencies.py  main.py  profanity_word_list.txt  settings.py
app/core/: __init__.py  base_model.py  connection_manager.py  constants.py  db.py  jwt.py  task_manager.py
app/enums/: send_types.py  session_enum.py
app/models/: audit_event.py  login_attempt.py  message.py  revoked_token.py  session.py  user.py
app/routers/: auth.py  message.py  session.py  user.py  websocket.py
app/schemas/: message.py  pagination.py  session.py  user.py
app/services/: audit_service.py  auth_service.py  login_tracker.py  message_service.py  session_service.py  token_control_service.py  user_service.py
tests/: test_auth.py  test_message_service.py  test_session_service.py
